--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,6 +29,11 @@
   font-style: normal;
   font-display: swap;
 }
+h1{
+  font-family: "Poppins";
+  font-weight: 200;
+  font-size: 60;
+}
 div,li,p,a{
   font-family: "Poppins";
 }
