--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,10 +37,14 @@
 
 h1 {
   font-family: "Poppins";
-  font-weight: 400;
-  font-size: 40;
+  font-weight: 300;
+  font-size: 50;
 }
-
+h2 {
+  font-family: "Poppins";
+  font-weight: 300;
+  font-size: 30;
+}
 div,
 li,
 p,
