--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,15 +25,18 @@
 }
 
 h1 {
-  font-weight: 300;
+  font-weight: 200;
   font-size: 50;
 }
 
 h2 {
-  font-weight: 300;
+  font-weight: 200;
   font-size: 30;
 }
-
+h3 {
+  font-weight: 200;
+  font-size: 20;
+}
 body {
   background: var(--background);
   color: var(--foreground);
